# trading-algo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  turbo.json
apps/api/: Dockerfile  package.json  pyproject.toml
apps/api/app/: config.py  deps.py  main.py  routes.py  schemas.py  security.py
apps/api/tests/: conftest.py  test_api.py  test_chain_api.py
apps/web/: Dockerfile  middleware.ts  package.json  tsconfig.json
apps/web/app/: layout.tsx
apps/web/components/: ui.tsx
apps/web/lib/: api-types-openapi.json  api.ts  format.ts  useStream.ts
deploy/: Caddyfile  DEPLOY.md  docker-compose.prod.yml
deploy/certs/: .gitignore
docs/superpowers/plans/: 2026-07-23-dashboard-account-summary-position-vwap.md  2026-07-23-expiry-aligned-option-capture.md  2026-07-23-greeks-iv-module.md  2026-07-23-option-chain-vwap.md  2026-07-24-option-chain-display-window.md
docs/superpowers/specs/: 2026-07-23-auto-daily-lifecycle-design.md  2026-07-23-dashboard-account-summary-position-vwap-design.md  2026-07-23-expiry-aligned-option-capture-design.md  2026-07-23-greeks-iv-module-design.md  2026-07-23-india-vix-ticker-design.md  2026-07-23-live-broker-mtm-pnl-design.md  2026-07-23-option-chain-vwap-design.md  2026-07-23-telegram-alerting-design.md  2026-07-24-option-chain-display-window-design.md
openspec/changes/add-kotak-fno-trading-algo/: design.md  proposal.md  tasks.md
openspec/changes/add-nextjs-fastapi-webapp/: proposal.md  tasks.md
openspec/changes/add-oi-option-selling-strategy/: proposal.md  tasks.md
openspec/changes/postgres-timescale-store/: design.md  proposal.md  tasks.md
src/algo_trading/: __init__.py  reporting.py
tests/: conftest.py  test_alerts.py  test_broker.py  test_broker_refresh.py  test_bse_expiry_epoch.py  test_capture.py  test_dashboard_bridge.py  test_database_config.py  test_execution.py  test_greeks.py  test_greeks_config.py  test_import_orders.py  test_import_trades.py  test_india_vix.py  test_instruments.py  test_live_feed.py  test_oi_orchestrator.py  test_oi_selling.py  test_option_chain.py  test_option_chain_greeks.py  test_option_chain_persistence.py  test_orchestrator.py  test_persistence.py  test_reporting.py  test_reporting_chain.py  test_risk.py  test_run_algo_purge.py  test_scheduler.py  test_sensex_oi.py  test_short_execution.py  test_strategy.py  test_telegram_commands.py  test_timescale_schema.py
(+92 files in other folders)
