[project]
name = "trading-algo-api"
version = "0.1.0"
description = "FastAPI web API over the algo_trading engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0", "ruff>=0.4", "mypy>=1.9"]
